--- a/style.css
+++ b/style.css
@@ -1,79 +1,63 @@
-
+* {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+   font-size: 18px;
+}
 body {
-    background-color: gray;
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 18px;
+    background:#777;
+    text-align: center;
 }
 
-h1 {
-    font-size: 18px;
-    color:grey;
-}
-
-h2 {
-    font-size: 18px;
-    color: white;
-}
-
-.container{
-    margin: auto;
+#container {
+    margin: 0 auto;
     width: 960px;
-
 }
 
-.header, .nav {
-    text-align: center;
-    background-color:#ebebeb;
-    padding: 15px;
-    margin-top: 10px;
+header, nav {
+    background:#ebebeb;
+    height: 75px;
 }
 
-.footer {
-    margin-top: 10px;
-    text-align: center;
-    background-color:#ebebeb;
-    padding: 15px;
-    margin-top: 10px;
+section {
+    position: relative;
 }
 
-.section {
-    text-align: center;
-    background-color: #ebebeb;
-    float:left;
-    padding: 10px;
+#section {
+    background:#ebebeb;
+    margin-top: 10px;
+    height: 250px;
     width: 495px;
-    height: 300px;
-    margin-top: 15px;
+    padding: 10px 10px 5px 10px;
+    float: left;
+}
+
+#article {
+    background: grey;
+    height: 184px;
+    padding: 5px 5px 5px 5px;
 
 }
 
-.aside {
-    text-align: center;
-    background-color: #ebebeb;
-    float: right;
-    padding: 10px;
-    width: 400px;
-    height: 300px;
-    margin-top: 15px;
+.content {
+    background: #ebebeb;
+    height: 50px;
 }
 
-.article {
-    background-color: grey;
-    height: 190px;
-    margin-top: 60px;
-    padding: 10px;
-
+#aside {
+    position: absolute;
+    right: 0;
+    background: #ebebeb;
+    height: 265px;
+    width: 435px;
+    margin-top: 10px;
 }
 
-
-.container{
-    margin: auto;
-    width: 960px;
-
+footer {
+    background: #ebebeb;
+    height: 75px;
+    margin-top: 288px;
 }
 
-.in-article{
-    background-color:white;
-    padding:5px;
-    margin-top:5px;
+p {
+   color: grey;
+   font-size: 18px;
 }
